hphp/test/zend/good/ext/intl/tests/calendar_getWeekendTransition_basic.php.skipif
<?php
if (version_compare(INTL_ICU_VERSION, "4.4.0") < 0) {
  echo "skip";
}
