hphp/test/zend/bad/ext/gmp/tests/bug50283.php.skipif
<?php if (!extension_loaded("gmp")) print "skip"; ?>
<?php if (version_compare(GMP_VERSION, "4.2.0", "<")) print "skip"; ?>